--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial-item">
                                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                                <h3>Sachin Suthat</h3>
+                                <h3>Sachin Suthar</h3>
                                 <h4>Project Manager</h4>
                                 <p>
                                     <i class="bx bxs-quote-alt-left quote-icon-left"></i> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam,
@@ -597,7 +597,7 @@
 
                         <div class="swiper-slide">
                             <div class="testimonial-item">
-                                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                                 <h3>Pawan Sharma</h3>
                                 <h4>ReactJs Developer</h4>
                                 <p>
