--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
             <h1>Vinit Kumbhani</h1>
-            <p>I'm <span class="typed" data-typed-items="Sofwate Developer (Web & App)"></span></p>
+            <p>I'm <span class="typed" data-typed-items="Software Developer (Web & App)"></span></p>
             <div class="social-links">
                 <a href="https://github.com/vinit403" class="twitter"><i class="bx bxl-github"></i></a>
                 <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
