--- a/index.html
+++ b/index.html
@@ -378,12 +378,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/CabBook-1.png" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/CabBook-11.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>CabBooking Application</h4>
                                 <p>Application</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/CabBook-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                                    <a href="https://github.com/vinit403/Cab-Booking-React_Native"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -396,7 +396,7 @@
                                 <h4>E-Commerce App</h4>
                                 <p>Appliction</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                                    <a href="https://github.com/vinit403/E-commerce-using-React-Native"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -404,12 +404,12 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/DoctorApp.png" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Doctor-App.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Doctor Appointment Application</h4>
                                 <p>Appliction</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/DoctorApp.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                                    <a href="https://github.com/vinit403/Doctor-Appointment-App-Design-in-React-Native"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -422,7 +422,7 @@
                                 <h4>Shayari Application</h4>
                                 <p>App</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                                    <a href="https://github.com/vinit403/Shayari-Application-In-React-Native"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -454,7 +454,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -466,7 +466,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
