add one project in portfolio

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Doctor-App.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>E-Commerce App</h4>
                                 <p>Appliction</p>
@@ -417,10 +417,10 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/Doctor-App.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Shayari Application</h4>
-                                <p>App</p>
+                                <p>Application</p>
                                 <div class="portfolio-links">
                                     <a href="https://github.com/vinit403/Shayari-Application-In-React-Native"><i class="bx bx-plus"></i></a>
                                 </div>
@@ -454,19 +454,18 @@
                         </div>
                     </div>
 
-                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/portfolio/MBAChaiWala-Clone.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>Web 3</h4>
-                                <p>Web</p>
+                                <h4>MBA ChaiWala Clone</h4>
+                                <p>Website (ReactJs)</p>
                                 <div class="portfolio-links">
-                                    <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                    <a href="https://github.com/vinit403/MBA-Chai-Wala-Clone-Design-in-ReactJS"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                 </div>
 
