--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 August 2002</span></li>
                                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 95865 86365</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gujarat, India</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, Gujarat, India</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
@@ -283,7 +283,7 @@
                             <h4>Vinit Kumbhani</h4>
                             <p><em>Innovative and deadline-driven Application Developer with 6 months of experience designing and developing user-centered application.</em></p>
                             <ul>
-                                <li>Gujarat, India</li>
+                                <li>Surat, Gujarat, India</li>
                                 <li>+91 95865 86365</li>
                                 <li>vinitkumbhani25@gmail.com</li>
                                 <li>vinitkumbhani01@gmail.com</li>
