--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 August 2002</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
                                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 95865 86365</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vinitkumbhani25@gmail.com</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Surat, Gujarat, India</span></li>
                                 </ul>
                             </div>
                             <div class="col-lg-6">
                                 <ul>
                                     <!-- <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li> -->
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B.Tech</span></li>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vinitkumbhani25@gmail.com</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 95865 86365</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                                    <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>  -->
                                 </ul>
                             </div>
                         </div>
