--- a/index.html
+++ b/index.html
@@ -307,21 +307,22 @@
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
                             <h4>React Native Intern</h4>
-                            <h5>2023 - Present</h5>
-                            <p><em>Elitist Software Solutions LLP, Surat, Gujarat </em></p>
+                            <h5>2023 - 2024</h5>
+                            <p><em>ELITIST SOFTWARE SOLUTIONS LLP, SURAT, GUJARAT </em></p>
                             <ul>
                                 <li>Lead in the design, development, and implementation of the application.</li>
                                 <li>Delegate tasks to the 6 members of the application development team and provide counsel on all aspects of the project. </li>
                             </ul>
                         </div>
-                        <!-- <div class="resume-item">
-                            <h4>Web Designer</h4>
-                            <h5>2022 - 2022</h5>
-                            <p><em>P P Savani University, SUrat, Gujarat</em></p>
+                        <div class="resume-item">
+                            <h4>React Native Developer</h4>
+                            <h5>2024 - Present</h5>
+                            <p><em>ELITIST SOFTWARE SOLUTIONS LLP, SURAT, GUJARAT </em></p>
                             <ul>
-                                <li>Design a Tech-Fest(Technical Festival) Website to represent my university.</li>
+                                <li>Lead in the design, development, and implementation of the application.</li>
+                                <li>Delegate tasks to the 6 members of the application development team and provide counsel on all aspects of the project. </li>
                             </ul>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
 
@@ -354,16 +355,16 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/QuirkPlus.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
-                                <h4>QuirkPlus: Your Daily Planner App</h4>
+                                <h4>QuirkPlus: Your Task Partner</h4>
                                 <p>Appliction</p>
                                 <div class="portfolio-links">
-                                    <a href="https://play.google.com/store/apps/details?id=com.accesseap"><i class="bx bx-plus"></i></a>
+                                    <a href="https://play.google.com/store/search?q=quirkplus&c=apps"><i class="bx bx-plus"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Steev1.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -374,7 +375,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
@@ -389,7 +390,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Doctor-App.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -400,7 +401,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
@@ -415,7 +416,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/Doctor-App.png" class="img-fluid" alt="">
                             <div class="portfolio-info">
@@ -426,7 +427,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                         <div class="portfolio-wrap">
