--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: [license-url] -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-                Designed by <a href="https://bootstrapmade.com/">Vinit Kumbhani</a>
+                Designed by <a href="https://www.linkedin.com/in/vinitkumbhani/">Vinit Kumbhani</a>
             </div>
         </div>
     </footer>
