--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                 <div class="row">
                     <div class="col-lg-4">
-                        <img src="assets/img/vinit.jpeg" class="img-fluid" alt="">
+                        <img src="assets/img/Vinit_Profile.jpeg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-8 pt-4 pt-lg-0 content">
                         <h3>React Native Developer.</h3>
