--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>I am Vinit Kumbhani. I have 6 Months of working experience as a Application Developer Welcome to my portfolio! I'm Vinit Kumbhani, a passionate React Native Developer with six months of hands-on experience gained through an internship.
-                        My journey into the world of mobile application development has been exhilarating, and I'm eager to share my expertise and projects with you.</p>
+                    <p>I'm Vinit Kumbhani, a passionate React Developer (Application & website) with 2 years of hands-on experience gained through an internship. My journey into the world of mobile application development has been exhilarating, and I'm eager
+                        to share my expertise and projects with you.</p>
                 </div>
 
                 <div class="row">
@@ -203,6 +203,13 @@
                         </div>
 
                         <div class="progress">
+                            <span class="skill">Next JS <i class="val">100%</i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
+                        <div class="progress">
                             <span class="skill">Firebase<i class="val">100%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -242,12 +249,6 @@
 
                         <div class="progress">
                             <span class="skill">Express<i class="val">100%</i></span>
-                            <div class="progress-bar-wrap">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <span class="skill">PHP<i class="val">100%</i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
