--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>I'm Vinit Kumbhani, a passionate React Developer (Application & website) with 2 years of hands-on experience gained through an internship. My journey into the world of mobile application development has been exhilarating, and I'm eager
-                        to share my expertise and projects with you.</p>
+                    <p>I'm Vinit Kumbhani, a passionate React Developer (Application & website) with 2 years of hands-on experience. My journey into the world of mobile application development & website development has been exhilarating, and I'm eager to
+                        share my expertise and projects with you.</p>
                 </div>
 
                 <div class="row">
